--- a/README
+++ b/README
@@ -3,19 +3,19 @@ PREFACE
 Original Author - Tim Smith (address unknown)
 Maintainers - 
 March 1995 - Sven Goldt (address unknown)
-July 1995  - Robert A. Yetman (bobyetman@worldnet.att.net)
+July 1995  - Robert A. Yetman (bobyetman@home.com)
 
-Current Maintainer - bobyetman@worldnet.att.net
+Current Maintainer - bobyetman@home.com
 
 LOCATION
 ========
-visit http://home.att.net/~bobyetman/index.html
+visit http://www.sucknews.org/index.html
 to download the latest version or view the README file.
 
 FTP Sites:
 Site1	     = sunsite.unc.edu
 Path1        = /pub/Linux/system/news/transport
-File1        = suck-4.2.5.tar.gz
+File1        = suck-4.3.0.tar.gz
 
 INTRODUCTION
 ============
@@ -45,23 +45,15 @@ testhost        	Check to see what commands your host recognizes or
 
 lmove 			put articles in news/group/number format.
 
-MAJOR CHANGES FROM 4.2.4 -> 4.2.5
+MAJOR CHANGES FROM 4.2.5 -> 4.3.0
 
-suck - Fixed a bug in posting messages to local host where if a line was
-	exactly 13 chars long it would get munged up.
+ * 	added the ability to use SSL.  If you have SSL libraries installed,
+and configure doesn't pick them up, edit the top of the Makefile (see step #8).
 
-suck - Changes to allow suck to compile under Inn 2.3
+rpost	added the -i option to ignore the 201 readonly code and try to post anyway.
 
-rpost - Added -n option, show file name as its being uploaded.
-	Added test for second duplicate article string to handle
-	DNews.
-
-rpost - If you're using inn-2.3 with rpost, you'll need to change your put.news
-	script around.  Inn-2.3 no longer stores the actual path of the 
-	article, rather it uses a CNFS vector.  Fortunately, Inn also has
-	a program called sm that allows you to translate from CNFS 
-	to the real article.  In the sampe directory, you'll see two
-	scripts, put.news.sm, and put.news.sm.pl, use the approprite one.
+suck    added the -bP option to post articles to the local server every x number
+	of articles, instead of waiting until all articles are downloaded.
 
 LICENSING INFO
 ==============
@@ -93,11 +85,9 @@ and they are using INN 1.5.1 or newer, chances are they compiled INN with
 Talk to the SA for the system and see if they'll compile with "DO".  Chances
 are they didn't even know this option existed.
 
-If you don't feel like going to the trouble of running INND/CNEWS/DNEWS/Typhoon, and
-you don't need a full blown NNTP daemon running, then suck, along with tin
-and a few batch files, can be used to read articles.  The scripts should be
-available from http://www.cix.co.uk/~mayday.  I don't use these, but supposedly
-they do work.
+An interesting program for processing the killfile log and forcing suck to
+download some of the articles in it can be found at:
+http://ourworld.compuserve.com/homepages/jvanerp/suckmore.html
 
 Is suck Y2K compliant?  As far as I can make it yes.   The only program that uses
 dates is testhost, and the date is sent to the remote NNTP host for the NEWGRP
@@ -110,18 +100,19 @@ HOW-TO-USE
 2.  If your history file is not a flat file, edit the top of the Makefile.
     If your flatfile history file is not at /usr/news/db/history, 
 	you'll need to use the -HF option, to tell suck where it is.
-3.  Make it.  (make , make install)
+3.  If you're using SSL edit the Makefile step #8.
+4.  Make it.  (make , make install)
     If you are having problems compiling suck, look at the Makefile,
 	there are comments in there for the various common problems
 	I see.   
-4.  READ THE MAN PAGES.
-5.  Create a sucknewsrc - which groups to download (see suck man pg).
+5.  READ THE MAN PAGES.
+6.  Create a sucknewsrc - which groups to download (see suck man pg).
 	If you have INND/CNEWS/DNEWS/PNEWS already running, then
 	just use 'suck remotehost -A -hl localhost', and the sucknewsrc
 	will be built for you.  BUT, before you do this, create a active.ignore
 	file, listing all the groups on the local host that you don't want
 	downloaded from the remote host (see man page for sample).
-6.  Take a look at the sample directory.  There are two shell scripts
+7.  Take a look at the sample directory.  There are two shell scripts
 	 in there that show the whole scheme from how to download news
 	(with suck), and how to upload news (with rpost).  Use get.news.inn
 	if you have INN running, as it knows how to gracefully get the
@@ -137,17 +128,8 @@ inn: anonymous ftp from ftp.isc.org /isc/inn
 perl: http://www.perl.com/CPAN/src/latest.tar.gz 
       anonymous ftp from prep.ai.mit.edu /gnu
 Perl/Tk: http://www.perl.com/CPAN/modules/by-module/Tk/Tk8XX.XXX.tar.gz
+SSL: http://www.openssl.org/
 
 FUTURE PLANS.
 ========================
-Yes, I'm still debating how to rewrite the internals of suck to address the
-long-standing complaint that killfiles slow things down.  In fact, the
-file queue.c is the bare bones start to this.  This has been slowed down
-by a lot of personal factors. 
-
-I've had a request for heirarchical killfiles, e.g. being able to
-specify a killfile for comp.*, a subkillfile for comp.linux.*, 
-then a sub-killfile for comp.linux.announce.  An article in 
-comp.linux.announce would have to pass all three killfiles before
-being downloaded.
 
