--- a/README
+++ b/README
@@ -3,9 +3,9 @@ PREFACE
 Original Author - Tim Smith (address unknown)
 Maintainers - 
 March 1995 - Sven Goldt (address unknown)
-July 1995  - Robert A. Yetman (bobyetman@home.com)
+July 1995  - Robert A. Yetman (bobyetman@sucknews.org)
 
-Current Maintainer - bobyetman@home.com
+Current Maintainer - bobyetman@sucknews.org
 
 LOCATION
 ========
@@ -15,7 +15,7 @@ to download the latest version or view the README file.
 FTP Sites:
 Site1	     = sunsite.unc.edu
 Path1        = /pub/Linux/system/news/transport
-File1        = suck-4.3.0.tar.gz
+File1        = suck-4.3.1.tar.gz
 
 INTRODUCTION
 ============
@@ -45,15 +45,15 @@ testhost        	Check to see what commands your host recognizes or
 
 lmove 			put articles in news/group/number format.
 
-MAJOR CHANGES FROM 4.2.5 -> 4.3.0
+MAJOR CHANGES FROM 4.3.0 -> 4.3.1
 
- * 	added the ability to use SSL.  If you have SSL libraries installed,
-and configure doesn't pick them up, edit the top of the Makefile (see step #8).
+* - Major changes to the configure stuff, to hopefully automatically
+	pick up where SSL, Perl, Inn, and history live.
 
-rpost	added the -i option to ignore the 201 readonly code and try to post anyway.
+* - fixes to Socks stuff
 
-suck    added the -bP option to post articles to the local server every x number
-	of articles, instead of waiting until all articles are downloaded.
+rpost, suck - added -Q option to allow specification of userid/passwd for
+	authentication via environment variables.
 
 LICENSING INFO
 ==============
@@ -62,12 +62,13 @@ blame me when they break.
 
 MAILING LIST!
 =============
-Thanks to Motoharu Kubo (mkubo@3ware.co.jp), there is a mailing list for
-suck.  It is intended as a place to discuss problems, etc, plans, and
-other issues related to suck.  Its address is "suck-ml@3ware.co.jp".
+There are two mailing lists for suck:
 
-To subscribe to the mailing list, send a mail message to majordomo@3ware.co.jp
-with the message text reading "subscribe suck-ml"
+suck-news@lists.sucknews.org & suck-announce@lists.sucknews.org
+
+To subscribe, send a blank e-mail to:
+suck-news-subscribe@lists.sucknews.org
+suck-announce-subscribe@lists.sucknews.org 
 
 NOTES:
 ======
@@ -96,11 +97,20 @@ date (right now its YYMMDD), I'll update testhost.
 
 HOW-TO-USE
 ==========
+0.  Run ./configure --help to see the options, especially the ones listed
+        last (--with-inn-lib && with-inn-include)
 1.  run ./configure
-2.  If your history file is not a flat file, edit the top of the Makefile.
+    If it can't find your Inn libraries/includes, make sure you use the 
+	--with-inn-lib=path & --with-inn-include=path options
+2. Check over the Makefile, make sure it found everything, if not fix it.
     If your flatfile history file is not at /usr/news/db/history, 
 	you'll need to use the -HF option, to tell suck where it is.
-3.  If you're using SSL edit the Makefile step #8.
+    If you're using Inn 2.3 or newer, make sure the Makefile knows
+	where your libinn.a and includes are, otherwise, the dedupe
+	function won't work.  See step #4.  Typically, these are in
+	the source tree.  If you don't have the source, get it,
+	see below.
+3.  If you're using SSL edit the Makefile step #nr7.
 4.  Make it.  (make , make install)
     If you are having problems compiling suck, look at the Makefile,
 	there are comments in there for the various common problems
@@ -120,6 +130,9 @@ HOW-TO-USE
 	WARNING: These scripts need editing before you can use them.  You
 	must change the various variables at the top of the scripts to
 	ensure they point to the right files/directories.
+	If you're using Inn 2.3.X with CNFS, you'll need to use
+	the 'put.news.sm*' scripts, to deal with the tokens that
+	Inn puts in the outgoing file instead of the article number.
 
 
 WHERE TO GET STUFF
