--- a/man/rpost.1
+++ b/man/rpost.1
@@ -91,6 +91,10 @@ will post one or more articles, specified by
 If hostname is not specified, rpost will use the environment
 variable
 .BI NNTPSERVER.
+The hostname may optionally include the port number, in the form
+.BI Host:Port
+. If this form is used, any port number specified via the -N option
+will be ignored.
 .SH Generic Options
 
 .BI \@filename 
