--- a/man/rpost.1
+++ b/man/rpost.1
@@ -93,7 +93,7 @@ variable
 .BI NNTPSERVER.
 The hostname may optionally include the port number, in the form
 .BI Host:Port
-. If this form is used, any port number specified via the -N option
+If this form is used, any port number specified via the -N option
 will be ignored.
 .SH Generic Options
 
