Changing defaults in suck_config.h
Setting N_PHRASES to /etc/suck/phrases, like Debian in
04_suck_confif.diff.

Setting HISTORY_FILE to /var/lib/news/history, like Debian, Fedora and
openSUSE in 04_suck_confif.diff, suck-4.3.2-rh.patch and suck-4.3.0.dif.

Closes https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=704920

Changing the corresponding path in man/suck.1 and README files, from
openSUSE suck-4.3.0.dif.

Setting N_DATADIR to /etc/suck like Debian in 04_suck_confif.diff.

Setting RNEWS to /usr/bin/rnews like openSUSE in suck-4.3.0.dif.

--- a/README
+++ b/README
@@ -109,7 +109,7 @@ HOW-TO-USE
     If it can't find your Inn libraries/includes, make sure you use the 
 	--with-inn-lib=path & --with-inn-include=path options
 2. Check over the Makefile, make sure it found everything, if not fix it.
-    If your flatfile history file is not at /usr/news/db/history, 
+    If your flatfile history file is not at /var/lib/news/history, 
 	you'll need to use the -HF option, to tell suck where it is.
     If you're using Inn 2.3 or newer, make sure the Makefile knows
 	where your libinn.a and includes are, otherwise, the dedupe
