--- a/man/suck.1
+++ b/man/suck.1
@@ -323,7 +323,7 @@ This option will cause suck to bypass the history check.
 
 \-HF history_file_name
 
-This option tells suck the location of the history file.  The default is at /usr/news/db/history.
+This option tells suck the location of the history file.  The default is at /var/lib/news/history.
 
 \-hl localhost
 
