--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 PREFACE
 =======
 Original Author - Tim Smith (address unknown)
-Maintainers - 
+Maintainers:
 March 1995     - Sven Goldt (goldt@math.tu-berlin.de)
 July 1995      - Robert A. Yetman (bobyetman@sucknews.org)
 September 2017 - Michael Vetter (jubalh@iodoru.org)
