Fix manpage Host:Port part
Reported at https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=858262

--- a/man/suck.1
+++ b/man/suck.1
@@ -192,7 +192,8 @@ Options valid in all modes
 \hostname
 
 The hostname may optionally include the port number, in the form
-.BI Host:Port.  If this option is used, any port number specified
+.BI Host:Port.
+If this option is used, any port number specified
 via the -N option is ignored.
 
 \@filename 
